--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
-    <title>Devsthali Resort</title>
+    <title>Devsthali Brar Resort</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
