--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
-    <title>Devsthali Brar Resort</title>
+    <link
+      rel = "icon"
+      href = "DBR_Logo.ico"
+    />
+      <title>Devsthali Brar Resort</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
